CheckEng | fixed oneofthree

--- a/checkeng/CMakeLists.txt
+++ b/checkeng/CMakeLists.txt
@@ -28,8 +28,10 @@ add_executable(checkeng
     main.cpp
     main_window.cpp
     login/login.cpp
-    main_window.h
+    one_of_three/one_of_three.cpp
+
     main_window.ui
+    one_of_three/one_of_three.ui
     ${TS_FILES}
 )
 
