--- a/checkeng/dialogs/CMakeLists.txt
+++ b/checkeng/dialogs/CMakeLists.txt
@@ -3,3 +3,5 @@ add_subdirectory(finish)
 add_subdirectory(add_tasks)
 add_subdirectory(choose)
 add_subdirectory(test1)
+add_subdirectory(test2)
+add_subdirectory(add_tasks2)
