CheckEng | added test2

--- a/checkeng/CMakeLists.txt
+++ b/checkeng/CMakeLists.txt
@@ -14,8 +14,23 @@ find_package(QT NAMES Qt6 Qt5 COMPONENTS Widgets LinguistTools  Network REQUIRED
 find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Widgets LinguistTools Network REQUIRED)
 
 set(APP_PATH ${CMAKE_CURRENT_LIST_DIR})
+set(RESOURCES_PATH ${APP_PATH}/resources)
+set(TRANSLATIONS_PATH ${APP_PATH})
 
 #set(TS_FILES en.ts)
+
+set(RESOURCES
+    ${RESOURCES_PATH}/images/svg.qrc
+    ${RESOURCES_PATH}/css/css.qrc
+)
+set(TranslationFiles
+   ${TRANSLATIONS_PATH}/resources/langs/en.ts
+   ${TRANSLATIONS_PATH}/resources/langs/ru.ts
+)
+
+qt5_add_resources(MOC_RESOURCES
+    ${RESOURCES}
+)
 
 add_subdirectory(dialogs)
 
@@ -35,6 +50,8 @@ add_executable(checkeng
     login/login.cpp
 
     main_window.ui
+    ${MOC_RESOURCES}
+    ${RESOURCES_PATH}/a.rc
     ${TS_FILES}
 )
 
